--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ email: hello@disarm.io
 description: "Data-driven decision making platform for malaria"
 
 collections:
-  - progress_updates
+  progress_updates:
+    output: true
 
 # Build settings
 markdown: kramdown
