--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ email: hello@disarm.io
 description: "Data-driven decision making platform for malaria"
 host: 0.0.0.0
 
-# Need jekyll-paginate gem
-#paginate: 5
-#paginate_path: "/progress/page:num/"
+# TODO: Install jekyll-paginate gem
+paginate: 5
+paginate_path: "/progress/page:num/"
 
 collections:
   progress_updates:
@@ -21,3 +21,4 @@ permalink: pretty
 
 gems:
   - jekyll-admin
+  - jekyll-paginate
