--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@ collections:
   uploads:
     title: Uploads
     output: true
+  algos:
+    title: API
+    output: true
 url: http://www.disarm.io
 baseurl: 
 email: hello@disarm.io
