--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ collections:
 url: http://www.disarm.io
 baseurl: 
 email: hello@disarm.io
-description: Data-driven decision making platform for malaria
+description: Data-driven decision making for malaria
 host: 0.0.0.0
 image_root_url: https://res.cloudinary.com/disarm/image/upload/
 image_account: disarm-website
