--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ collections:
   uploads:
     title: Uploads
     output: true
-url: http://www.disarm.io
+url: https://www.disarm.io
 baseurl: 
 email: hello@disarm.io
 description: Data-driven decision making for malaria
